--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,11 @@ h1 {
     text-align: left;
     background-color: #DDDDDD;
 }
+
+
+/*exhibition*/
+
+.banner3 img {
+    width: 100%;
+    height: 200px;
+}
