--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,23 @@ h1 {
     width: 100%;
     height: 200px;
 }
+
+.cosmology img {
+    width: 90%;
+}
+
+.evolution img {
+    width: 90%;
+}
+
+.biologi img {
+    width: 90%;
+}
+
+.robotics img {
+    width: 90%;
+}
+
+.ecology img {
+    width: 90%;
+}
