--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,11 @@ h1 {
     background-color: #DDDDDD;
     list-style: none;
 }
+
+.banner4 img {
+    width: 100%;
+}
+
+.banner5 img {
+    width: 100%;
+}
