--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,15 @@ h1 {
 .banner5 img {
     width: 100%;
 }
+
+
+/*tablet*/
+
+@media (min-width:750px), (max-width:1080px) {
+
+    .front {
+        display: grid;
+        grid-column: 1fr 1fr;
+    }
+
+}
