--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
 }
 
+
 /*header*/
 
 .header-wrapper {
@@ -160,12 +161,37 @@ h1 {
 
 @media (min-width:750px){
 
-    .front, .front2 {
+    .front {
         display: grid;
-        grid-row: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .explore {
+        grid-column: 1;
+    }
+
+    .exhibition {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .visit {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .get-involved {
+        grid-row: 2;
+        grid-column: 2;
+    }
+
+    .banner img {
+        
     }
 
 }
+
+
 
 
 /*pc*/
