--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,8 @@ h2 {
 
 @media (min-width:750px){
 
+    /*index*/
+
     .front {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -214,6 +216,46 @@ h2 {
         display: block;
     }
 
+    .banner h1{
+        display: none;
+    }
+
+    /*explore*/
+
+    .kids {
+        grid-column: 1;
+        grid-row: 1;
+        margin: 30px;
+    }
+    .info {
+        grid-row: 1;
+        grid-column: 2;
+        margin: 30px;
+    }
+
+    .teachers {
+        grid-row: 2;
+        grid-column: 1;
+        margin: 30px;
+    }
+
+    .info2 {
+        grid-row: 2;
+        grid-column: 2;
+        margin: 30px;
+    }
+
+    .researchers {
+        grid-row: 3;
+        grid-column: 1;
+        margin: 30px;
+    }
+
+    .info3 {
+        grid-row: 3;
+        grid-column: 2;
+        margin: 30px;
+    }
 }
 
 
