--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ footer a:hover {
     /* margin: 30px; */
 }
 
+
 .front img {
     width: 300px;
 }
@@ -106,6 +107,7 @@ footer a:hover {
 h2 {
     color: #401317;
 }
+
 
 
 /*explore*/
@@ -161,6 +163,35 @@ h2 {
 
 .banner4 img {
     width: 100%;
+}
+
+.front2 {
+    display: grid;
+    justify-content: center;
+    font-size: larger;
+    text-align: center;
+    /* margin: 30px; */
+}
+
+.front h1 {
+    margin-top: 50px;
+}
+
+
+h1 {
+    color: #401317;
+}
+
+.front2 p {
+    margin: 20px;
+    color: #401317;
+    text-align: left;
+    background-color: #DDDDDD;
+}
+
+.front2 li {
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 
@@ -301,7 +332,11 @@ h2 {
 
     /*visit*/
 
-    
+    .front2 {
+        justify-content: center;
+        align-items: center;
+
+    }
 
 
 }
