--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,10 @@ h1 {
     margin-left: 20px;
 }
 
+.front2 .mapouter {
+    justify-content: center;
+}
+
 
 /*get involved*/
 
@@ -205,6 +209,13 @@ h1 {
 /*tablet*/
 
 @media (min-width:750px){
+
+    /*header*/
+
+    .logo img {
+        height: 80px;
+        width: auto;
+    }
 
     /*index*/
 
@@ -330,12 +341,12 @@ h1 {
     }
 
 
-    /*visit*/
+    /*visit*/ /*get-involved*/
 
     .front2 {
         justify-content: center;
         align-items: center;
-
+        margin: 50px;
     }
 
 
